trunk/Archive2/7e/8a2096add35e7e/output
main.cpp: In function 'int main()':
main.cpp:44:13: error: invalid initialization of reference of type 'const Template<A>&' from expression of type 'Template<B>'
     funcT(bt);
             ^
main.cpp:35:6: note: in passing argument 1 of 'void funcT(const Template<A>&)'
 void funcT(const Template<A> &a)
      ^
